--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+ <style name="homebutton">
+     <item name = "android:background">#2FAF84</item>
+     <item name = "android:textColor">#FFFFFF</item>
+ </style>
 
 </resources>
