--- a/app/src/main/res/layout/activity_emergencyhotline.xml
+++ b/app/src/main/res/layout/activity_emergencyhotline.xml
@@ -3,17 +3,196 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomePage">
+    android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/emergencyhotline"
+        style="@style/homebutton"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="	#008080"
+        android:onClick="process"
+        android:text="Emergency Hotline"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
+        app:layout_constraintEnd_toStartOf="@+id/emergencylineright"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/evaccenlineright"
+        app:layout_constraintTop_toTopOf="@+id/buttonlineup"
+        app:layout_constraintVertical_bias="0.545" />
 
+    <Button
+        android:id="@+id/evacuation"
+        style="@style/homebutton"
+        android:layout_width="78dp"
+        android:layout_height="24dp"
+        android:background="	#008080"
+        android:onClick="process"
+        android:text="EVAC.CENTER"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
+        app:layout_constraintEnd_toStartOf="@+id/evaccenlineright"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="@+id/homerightline"
+        app:layout_constraintTop_toTopOf="@+id/buttonlineup"
+        app:layout_constraintVertical_bias="0.518" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/piclinedown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/emergencyhotline" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/piclineup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="511dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/piclinedown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="368dp"
+        app:layout_constraintGuide_percent="0.25" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/boderleft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="384dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/boderright"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="0dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/buttonlineup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="357dp"
+        app:layout_constraintGuide_percent="0.24" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/buttonlinedown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="317dp"
+        app:layout_constraintGuide_percent="0.34" />
+
+    <Button
+        android:id="@+id/home"
+        style="@style/homebutton"
+        android:layout_width="50dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="	#008080"
+        android:onClick="process"
+        android:text="HOME"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
+        app:layout_constraintEnd_toStartOf="@+id/homerightline"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/homeleftguide"
+        app:layout_constraintTop_toTopOf="@+id/buttonlineup"
+        app:layout_constraintVertical_bias="0.518" />
+
+    <Button
+        android:id="@+id/tips"
+        style="@style/homebutton"
+        android:layout_width="41dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="	#008080"
+        android:onClick="process"
+        android:text="TIPS"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
+        app:layout_constraintEnd_toStartOf="@+id/boderright"
+        app:layout_constraintHorizontal_bias="0.714"
+        app:layout_constraintStart_toStartOf="@+id/emergencylineright"
+        app:layout_constraintTop_toTopOf="@+id/buttonlineup"
+        app:layout_constraintVertical_bias="0.518" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/homerightline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="326dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/evaccenlineright"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="211dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/emergencylineright"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="77dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/borderup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/borderdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="1" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/homeleftguide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.015" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:layout_width="361dp"
+        android:layout_height="320dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/borderdown"
+        app:layout_constraintEnd_toStartOf="@+id/boderright"
+        app:layout_constraintStart_toStartOf="@+id/boderleft"
+        app:layout_constraintTop_toTopOf="@+id/buttonlinedown"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,13 +200,13 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
+                android:layout_width="361dp"
                 android:layout_height="70dp"
                 android:layout_margin="10dp"
                 app:cardBackgroundColor="@android:color/darker_gray">
 
                 <android.support.constraint.ConstraintLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="356dp"
                     android:layout_height="match_parent">
 
                     <TextView
@@ -46,35 +225,12 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <Button
-                        android:id="@+id/home"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="124dp"
-                        android:layout_marginRight="124dp"
-                        android:layout_marginTop="8dp"
-                        android:onClick="process"
-                        android:text="Home"
-                        app:layout_constraintEnd_toEndOf="@+id/ncr"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <Button
-                        android:id="@+id/evacuationcenter"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginTop="8dp"
-                        android:onClick="process"
-                        android:text="EvacuationCenter"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
 
 
             <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
+                android:layout_width="361dp"
                 android:layout_height="280dp"
                 android:layout_margin="10dp"
                 app:cardBackgroundColor="@android:color/darker_gray">
@@ -162,7 +318,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
+                android:layout_width="351dp"
                 android:layout_height="280dp"
                 android:layout_margin="10dp"
                 app:cardBackgroundColor="@android:color/darker_gray">
@@ -250,7 +406,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
+                android:layout_width="361dp"
                 android:layout_height="70dp"
                 android:layout_margin="10dp"
                 app:cardBackgroundColor="@android:color/darker_gray">
@@ -278,7 +434,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
+                android:layout_width="361dp"
                 android:layout_height="280dp"
                 android:layout_margin="10dp"
                 app:cardBackgroundColor="@android:color/darker_gray">
@@ -366,7 +522,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
+                android:layout_width="361dp"
                 android:layout_height="280dp"
                 android:layout_margin="10dp"
                 app:cardBackgroundColor="@android:color/darker_gray">
@@ -465,6 +621,7 @@
 
 
         </LinearLayout>
+
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
