--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,26 @@
         <item name="android:textColor">#ffaa66cc</item>
         <item name="android:textSize">24dp</item>
     </style>
+
+    <style name="evacpasig">
+        <item name="android:textColor">#43c3b6</item>
+        <item name="android:textSize">24dp</item>
+    </style>
+
+    <style name="evacmarikina">
+        <item name="android:textColor">#FF0DDB0D</item>
+        <item name="android:textSize">24dp</item>
+    </style>
+
+    <style name="evacmanila">
+        <item name="android:textColor">#ff0099cc</item>
+        <item name="android:textSize">24dp</item>
+    </style>
+
+    <style name="evacqc">
+        <item name="android:textColor">#FFF6B8CD</item>
+        <item name="android:textSize">24dp</item>
+    </style>
+
+
 </resources>
