--- a/app/src/main/res/layout/activity_evacuationcenter1.xml
+++ b/app/src/main/res/layout/activity_evacuationcenter1.xml
@@ -7,6 +7,22 @@
 
 
     <Button
+        android:id="@+id/evacuation"
+        style="@style/homebutton"
+        android:layout_width="78dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:background="	#008080"
+        android:onClick="process"
+        android:text="EVAC.CENTER"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
+        app:layout_constraintEnd_toStartOf="@+id/evaccenlineright"
+        app:layout_constraintStart_toStartOf="@+id/homerightline"
+        app:layout_constraintTop_toTopOf="@+id/buttonlineup" />
+
+    <Button
         android:id="@+id/emergencyhotline"
         style="@style/homebutton"
         android:layout_width="0dp"
@@ -26,20 +42,6 @@
         app:layout_constraintStart_toStartOf="@+id/evaccenlineright"
         app:layout_constraintTop_toTopOf="@+id/buttonlineup" />
 
-    <Button
-        android:id="@+id/evacuation"
-        style="@style/homebutton"
-        android:layout_width="78dp"
-        android:layout_height="24dp"
-        android:background="	#008080"
-        android:onClick="process"
-        android:text="EVAC.CENTER"
-        android:textSize="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
-        app:layout_constraintEnd_toStartOf="@+id/evaccenlineright"
-        app:layout_constraintStart_toStartOf="@+id/homerightline"
-        app:layout_constraintTop_toTopOf="@+id/buttonlineup" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
@@ -48,7 +50,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/evaccenter" />
+        app:srcCompat="@drawable/hp1" />
 
     <android.support.constraint.Guideline
         android:id="@+id/piclineup"
@@ -77,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="-14dp" />
+        app:layout_constraintGuide_end="0dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/buttonlineup"
@@ -172,7 +174,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="30dp"
+        app:layout_constraintGuide_begin="-28dp"
         app:layout_constraintGuide_percent="0.015" />
 
 
@@ -181,9 +183,9 @@
         android:layout_height="340dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -242,24 +244,6 @@
                     android:layout_width="371dp"
                     android:layout_height="match_parent">
 
-                    <ImageView
-                        android:id="@+id/makatiimage"
-                        android:layout_width="132dp"
-                        android:layout_height="96dp"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@mipmap/ic_launcher" />
-
                     <TextView
                         android:id="@+id/umak"
                         android:layout_width="172dp"
@@ -315,6 +299,20 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="1.0" />
 
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="155dp"
+                        android:layout_height="85dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginStart="7dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/makatigm"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/makati" />
+
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
 
@@ -348,7 +346,10 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.571" />
+
+
                 </android.support.constraint.ConstraintLayout>
+
             </android.support.v7.widget.CardView>
 
 
@@ -379,6 +380,20 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.862" />
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="155dp"
+                        android:layout_height="85dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginStart="7dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/makatigm"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/taguig" />
 
                     <Button
                         android:id="@+id/taguiggm"
@@ -417,23 +432,20 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.133" />
 
+
                     <ImageView
-                        android:id="@+id/cayetanoimage"
-                        android:layout_width="132dp"
-                        android:layout_height="96dp"
+                        android:id="@+id/imageView10"
+                        android:layout_width="155dp"
+                        android:layout_height="85dp"
                         android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginStart="8dp"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginStart="7dp"
                         android:layout_marginTop="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/guideline1"
-                        app:layout_constraintVertical_bias="1.0"
-                        app:srcCompat="@mipmap/ic_launcher" />
+                        app:layout_constraintStart_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/taguig" />
 
 
                 </android.support.constraint.ConstraintLayout>
@@ -514,7 +526,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/paranquegm"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@mipmap/ic_launcher" />
+                        app:srcCompat="@drawable/para" />
 
                     <Button
                         android:id="@+id/paranquegm"
@@ -667,7 +679,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@mipmap/ic_launcher" />
+                        app:srcCompat="@drawable/munt"  />
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
@@ -779,7 +791,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@mipmap/ic_launcher" />
+                        app:srcCompat="@drawable/pasig" />
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
@@ -897,7 +909,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@mipmap/ic_launcher" />
+                        app:srcCompat="@drawable/marikina" />
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
@@ -1016,7 +1028,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@mipmap/ic_launcher" />
+                        app:srcCompat="@drawable/manila" />
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
@@ -1134,7 +1146,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@mipmap/ic_launcher" />
+                        app:srcCompat="@drawable/quez" />
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
