--- a/app/src/main/res/layout/activity_tips.xml
+++ b/app/src/main/res/layout/activity_tips.xml
@@ -6,35 +6,39 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/emergencyhotline"
-        style="@style/homebutton"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:onClick="process"
-        android:text="EmergencyHotline"
-        android:textSize="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
-        app:layout_constraintEnd_toStartOf="@+id/emergencylineright"
-        app:layout_constraintStart_toStartOf="@+id/evaccenlineright"
-        app:layout_constraintTop_toTopOf="@+id/buttonlineup" />
-
-    <Button
         android:id="@+id/evacuation"
         style="@style/homebutton"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_width="78dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:background="	#008080"
         android:onClick="process"
         android:text="EVAC.CENTER"
         android:textSize="10dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
         app:layout_constraintEnd_toStartOf="@+id/evaccenlineright"
         app:layout_constraintStart_toStartOf="@+id/homerightline"
+        app:layout_constraintTop_toTopOf="@+id/buttonlineup" />
+
+    <Button
+        android:id="@+id/emergencyhotline"
+        style="@style/homebutton"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="	#008080"
+        android:onClick="process"
+        android:text="Emergency Hotline"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
+        app:layout_constraintEnd_toStartOf="@+id/emergencylineright"
+        app:layout_constraintStart_toStartOf="@+id/evaccenlineright"
         app:layout_constraintTop_toTopOf="@+id/buttonlineup" />
 
     <ImageView
@@ -96,27 +100,28 @@
         android:id="@+id/home"
         style="@style/homebutton"
         android:layout_width="50dp"
-        android:layout_height="40dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:background="	#008080"
         android:onClick="process"
         android:text="HOME"
         android:textSize="10dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonlinedown"
         app:layout_constraintEnd_toStartOf="@+id/homerightline"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/homeleftguide"
         app:layout_constraintTop_toTopOf="@+id/buttonlineup"
-        app:layout_constraintVertical_bias="0.529" />
+        app:layout_constraintVertical_bias="0.481" />
 
     <Button
         android:id="@+id/tips"
         style="@style/homebutton"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_width="41dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="	#008080"
         android:onClick="process"
         android:text="TIPS"
         android:textSize="10dp"
@@ -163,40 +168,27 @@
         app:layout_constraintGuide_begin="20dp"
         app:layout_constraintGuide_percent="1" />
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="367dp"
-        android:layout_height="320dp"
-        android:layout_marginBottom="8dp"
+    <android.support.constraint.Guideline
+        android:id="@+id/homeleftguide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="-28dp"
+        app:layout_constraintGuide_percent="0.015" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/boderright"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/buttonlinedown">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="334dp"
-                android:layout_height="197dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@drawable/tips1"
-                tools:layout_editor_absoluteY="16dp" />
-
-        </LinearLayout>
-    </ScrollView>
+        app:layout_constraintTop_toTopOf="@+id/borderup"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/tips1" />
 
 </android.support.constraint.ConstraintLayout>
