--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#0ddb0d</color>
+    <color name="colorPrimaryDark">#15237b</color>
     <color name="colorAccent">#f6b8cd</color>
 </resources>
